--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <base href="/">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <style>
-        html, body {
-            height: 100%;
-            padding: 0;
-            margin: 0;
-        }
-    </style>
-</head>
+    <head>
+        <base href="/">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./app.css" />
+    </head>
 
-<body>
-    <my-app>Loading...</my-app>
+    <body>
+        <my-app>Loading...</my-app>
 
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <!--polyfills -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+        <!--polyfills -->
+        <script src="node_modules/core-js/client/shim.min.js"></script>
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+        <script src="node_modules/zone.js/dist/zone.js"></script>
 
-    <!--scripts -->
-    <script src="systemjs.config.js"></script>
-    <script>
-        System.import('app').catch(function (err) { console.error(err); });
-    </script>
-</body>
+        <!--scripts -->
+        <script src="systemjs.config.js"></script>
+        <script>
+            System.import('app').catch(function (err) { console.error(err); });
+        </script>
+    </body>
 
 </html>
