--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,15 @@
-<!DOCTYPE html>
+﻿<!doctype html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>Binder</title>
+  <base href="/">
 
-    <head>
-        <base href="/">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./app.css" />
-    </head>
-
-    <body>
-        <my-app>Loading...</my-app>
-
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-        <!--polyfills -->
-        <script src="node_modules/core-js/client/shim.min.js"></script>
-
-        <script src="node_modules/zone.js/dist/zone.js"></script>
-
-        <!--scripts -->
-        <script src="systemjs.config.js"></script>
-        <script>
-            System.import('app').catch(function (err) { console.error(err); });
-        </script>
-    </body>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
 </html>
